syntax = "proto3";
import "commontype/ClientInfo.proto";
import "subbroker/type.proto";
import "inboxservice/InboxFetched.proto";
import "inboxservice/LWT.proto";
import "inboxservice/Replica.proto";
import "inboxservice/TopicFilterOption.proto";
import "inboxservice/InboxStoreCoProc.proto";

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.inbox.rpc.proto";
option java_outer_classname = "InboxServiceProtos";

package inboxservice;

service InboxService {
  rpc get (GetRequest) returns (GetReply);
  rpc attach (AttachRequest) returns (AttachReply);
  rpc detach (DetachRequest) returns (DetachReply);
  rpc create (CreateRequest) returns (CreateReply);
  rpc touch (TouchRequest) returns (TouchReply);
  rpc sub(SubRequest) returns (SubReply);
  rpc unsub(UnsubRequest) returns (UnsubReply);
  rpc receive (stream SendRequest) returns (stream SendReply);
  rpc fetch(stream InboxFetchHint) returns (stream InboxFetched);
  rpc commit(CommitRequest) returns(CommitReply);

  rpc sendLWT (SendLWTRequest) returns (SendLWTReply);
  rpc delete (DeleteRequest) returns (DeleteReply);
  rpc expire (ExpireRequest) returns (ExpireReply);
  rpc expireAll (ExpireAllRequest) returns (ExpireAllReply);
  rpc checkSubscriptions(subbroker.CheckRequest) returns (subbroker.CheckReply);
}

message GetRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 now = 4;
}

message GetReply {
  enum Code{
    EXIST = 0;
    NO_INBOX = 1;
    TRY_LATER = 2;
    ERROR = 3;
  }
  uint64 reqId = 1;
  Code code = 2;
  repeated inboxservice.InboxVersion inbox = 3; // available when code = EXIST
}

message AttachRequest {
  uint64 reqId = 1;
  string inboxId = 2;
  uint64 incarnation = 3;
  uint64 version = 4;
  uint32 expirySeconds = 5;
  optional inboxservice.LWT lwt = 6;
  commontype.ClientInfo client = 7; // the owner client
  uint64 now = 8;
}

message AttachReply {
  enum Code {
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
    TRY_LATER = 3;
    ERROR = 4;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message DetachRequest {
  uint64 reqId = 1;
  string inboxId = 2;
  uint64 incarnation = 3;
  uint64 version = 4;
  uint32 expirySeconds = 5;
  bool discardLWT = 6;
  commontype.ClientInfo client = 7;
  uint64 now = 8;
  optional Replica sender = 9; // if the request is triggered by detach task on the replica
}

message DetachReply {
  enum Code {
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
    BACK_PRESSURE_REJECTED = 3;
    TRY_LATER = 4;
    ERROR = 5;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message CreateRequest {
  uint64 reqId = 1;
  string inboxId = 2;
  uint64 incarnation = 3;
  uint32 expirySeconds = 4;
  uint32 limit = 5;
  bool dropOldest = 6;
  optional inboxservice.LWT lwt = 7;
  commontype.ClientInfo client = 8;
  uint64 now = 9;
}

message CreateReply {
  enum Code {
    OK = 0;
    TRY_LATER = 1;
    ERROR = 2;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message TouchRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 incarnation = 4;
  uint64 version = 5;
  uint64 now = 6;
}

message TouchReply {
  enum Code {
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
    TRY_LATER = 3;
    ERROR = 4;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message SubRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 incarnation = 4;
  uint64 version = 5;
  string topicFilter = 6;
  TopicFilterOption option = 7;
  uint64 now = 8;
}

message SubReply {
  enum Code {
    OK = 0;
    EXISTS = 1;
    NO_INBOX = 2;
    EXCEED_LIMIT = 3;
    CONFLICT = 4;
    BACK_PRESSURE_REJECTED = 5;
    TRY_LATER = 6;
    ERROR = 7;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message UnsubRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 incarnation = 4;
  uint64 version = 5;
  string topicFilter = 6;
  uint64 now = 7;
}

message UnsubReply {
  enum Code {
    OK = 0;
    NO_INBOX = 1;
    NO_SUB = 2;
    CONFLICT = 3;
    BACK_PRESSURE_REJECTED = 4;
    TRY_LATER = 5;
    ERROR = 6;
  }
  uint64 reqId = 1;
  Code code = 2;
  optional TopicFilterOption option = 3; // when code is OK
}

message SendRequest {
  uint64 reqId = 1;
  subbroker.DeliveryRequest request = 2;
}

message SendReply {
  uint64 reqId = 1;
  subbroker.DeliveryReply reply = 2;
}

message InboxFetchHint {
  uint64 sessionId = 1;
  string inboxId = 2;
  uint64 incarnation = 3;
  int32 capacity = 4;
  uint64 lastFetchQoS0Seq = 5;
  uint64 lastFetchSendBufferSeq = 6;
}

message InboxFetched{
  uint64 sessionId = 1;
  string inboxId = 2;
  uint64 incarnation = 3;
  Fetched fetched = 4;
}

message CommitRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 incarnation = 4;
  uint64 version = 5;
  optional uint64 qos0UpToSeq = 6;
  optional uint64 sendBufferUpToSeq = 7;
  uint64 now = 8;
}

message CommitReply {
  enum Code {
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
    TRY_LATER = 3;
    ERROR = 4;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message SendLWTRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 incarnation = 4;
  uint64 version = 5;
  uint64 now = 6;
}

message SendLWTReply {
  enum Code {
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
    BACK_PRESSURE_REJECTED = 3;
    TRY_LATER = 4;
    ERROR = 5;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message DeleteRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 incarnation = 4;
  uint64 version = 5;
}

message DeleteReply {
  enum Code {
    OK = 0;
    NO_INBOX = 1;
    CONFLICT = 2;
    BACK_PRESSURE_REJECTED = 3;
    TRY_LATER = 4;
    ERROR = 5;
  }
  uint64 reqId = 1;
  Code code = 2;
  map<string, TopicFilterOption> topicFilters = 3;
}

message ExpireRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string inboxId = 3;
  uint64 now = 4;
}

message ExpireReply {
  enum Code {
    OK = 0;
    NOT_FOUND = 1;
    TRY_LATER = 2;
    ERROR = 3;
  }
  uint64 reqId = 1;
  Code code = 2;
}

message ExpireAllRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  uint32 expirySeconds = 3;
  uint64 now = 4;
}

message ExpireAllReply {
  enum Code {
    OK = 0;
    TRY_LATER = 1;
    ERROR = 2;
  }
  uint64 reqId = 1;
  Code code = 2;
}
